Fix: clientSecret 오타

--- a/views/login.html
+++ b/views/login.html
@@ -39,7 +39,7 @@
                 <tr>
                     <td>{{domain.host}}</td>
                     <td>{{domain.type}}</td>
-                    <td>{{domain.cliendSecret}}</td>
+                    <td>{{domain.clientSecret}}</td>
                 </tr>
             {% endfor %}
         </table>
